# accounts

./: .gitignore  AGENTS.md  COPYRIGHT.md  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
apache/: vhost.txt
app/accounts/: settings.py  urls.py  wsgi.py
app/api/: views.py
app/main/: admin.py  forms.py  models.py  views.py
app/registration/: forms.py  models.py  urls.py  views.py
app/utils/: admin.py  authenticate.py  models.py  urls.py  views.py
bireme/: manage.py
bireme/accounts/: settings-old.py  settings.py  settings_local.py-SAMPLE  urls.py  wsgi.py
bireme/api/: api.py  urls.py  views.py
bireme/fixtures/: ccs.json  countries.json  memberships.json  roles.json  roleservices.json  services.json  topics.json  user.json
bireme/log/: admin.py  middleware.py  mixins.py  models.py  tests.py
bireme/main/: __init__.py  admin.py  decorators.py  (+6 more)
fabric/: environment.py-SAMPLE  fabfile.py
html/: centers.php  change-password.php  edit-profile.php  footer.php  head.php  help.php  index.php  login.php  menu.php  networks.php  new-center.php  new-network.php  new-role.php  new-service.php  new-user.php  pagination.php  password-new.php  password-reset-confirm.php  password-reset.php  roles.php  services.php  users.php
tools/: id-to-fixture.py  make-login-via-api.sh  restart.sh
utils/: 3166_utf8.id  centros.xml  correct-parameters-to-login.json  countries.txt  incorrect-parameters-to-login.json
(+86 files in other folders)
